--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   "author": "Jeck",
   "license": "ISC",
   "dependencies": {
+    "discord-economy": "^1.2.2",
+    "sequelize": "^5.21.5",
+    "sqlite3": "^4.1.1"
     "discord.js": "^12.0.1",
     "discord.js-commando": "^0.10.0"
   }
