--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "discord-economy": "^1.2.2",
     "sequelize": "^5.21.5",
-    "sqlite3": "^4.1.1"
+    "sqlite3": "^4.1.1",
     "discord.js": "^12.0.1",
     "discord.js-commando": "^0.10.0"
   }
