--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
   "license": "ISC",
   "dependencies": {
     "discord-economy": "^1.2.2",
+    "discord-leveling": "^1.1.0",
+    "discord.js": "^12.2.0",
+    "discord.js-commando": "^0.10.0",
     "sequelize": "^5.21.5",
-    "sqlite3": "^4.1.1",
-    "discord.js": "^12.0.1",
-    "discord.js-commando": "^0.10.0"
+    "sqlite3": "^4.1.1"
   }
 }
